# giflib-4.1.6

cmake_config/: .gitignore  CMakeLists.txt  alloc.h  graphics.h
cmake_config/build_vs/: CMakeCache.txt  unistd.h
windows/: UpgradeLog.htm  UpgradeLog2.htm  gifshow.sln
